--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,10 @@
 pipeline {
-  agent none{
-    tools{
-        maven 'maven_3_5_0'
+  agent {
+    docker {
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
+  }
   stages {
     stage('Checkout') {
       steps {
@@ -27,23 +29,22 @@ pipeline {
         }
       }
     }
-    stage('Build docker image'){
-            steps{
-                script{
-                    sh 'docker build -t nancyrani/devops-integration .'
-                }
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "nancyrani/spring-boot-app:${BUILD_NUMBER}"
+        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
+      }
+      steps {
+        script {
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                dockerImage.push()
             }
         }
-        stage('Push image to Hub'){
-            steps{
-                script{
-                sh 'docker login -u nancyrani -p Test@2022'
-
-}
-                   sh 'docker push nancyrani/devops-integration'
-                }
-            }
-        }
+      }
+    }
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
