--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -33,14 +33,13 @@ pipeline {
       environment {
         DOCKER_IMAGE = "nancyrani/spring-boot-app:${BUILD_NUMBER}"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        withCredentials([usernamePassword(credentialsId:"docker-cred",passwordVariable:"DockerHubPass",usernameVariable:"DockerHubUser")]){
-        sh "docker login -u ${env.DockerHubUser} -p ${env.DockerHubPass}"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
         script {
             sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
-             sh "docker login -u ${env.DockerHubUser} -p ${env.DockerHubPass}{
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
                 dockerImage.push()
             }
         }
