--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
     }
     stage("build "){
             steps{
-                sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t abhishekf5/maven-abhishek-docker-agent:v1 ."
+                sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
                 echo 'Image build bhi ho gayi'
             }
         }
