--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://65.0.176.27:9000"
+        SONAR_URL = "http://13.201.137.90:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
@@ -29,21 +29,23 @@ pipeline {
         }
       }
     }
-    stage("build "){
-            steps{
-                sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t abhishekf5/maven-abhishek-docker-agent:v1 .'
-                echo 'Image build bhi ho gayi'
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "nancyrani/naina-cicd:${BUILD_NUMBER}"
+        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
+      }
+      steps {
+        script {
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                dockerImage.push()
             }
         }
-    stage("push"){
-            steps{
-                withCredentials([usernamePassword(credentialsId:"dockerHub",passwordVariable:"dockerHubPass",usernameVariable:"dockerHubUser")]){
-                sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPass}"
-               sh "docker push ${env.dockerHubUser}/nancy rani/maven-abhishek-docker-agent:v1"
-                echo 'image push ho gaya'
-                }
-              }
-            }  
+      }
+
+    }  
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
