--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -36,6 +36,13 @@ pipeline {
         REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
+          script {
+               // Debugging: List files in the target directory
+               sh "ls -l java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/"
+                    
+                // Debugging: Show the contents of the Dockerfile
+                sh "cat java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+      steps {
         script {
             sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
